--- a/hornet.html
+++ b/hornet.html
@@ -12,6 +12,8 @@
 
         <p>Hornet will return in <b>Silksong!</b></p>
 
+        <p>Sadly there isn't a release date yet.</p>
+
         <img src="./hornet.jpg" title="She rocks!" width="200px">
 
         <p>Words Hornet says:</p>
