Added Nav links

--- a/hornet.html
+++ b/hornet.html
@@ -3,6 +3,8 @@
 <html>
     <header>
         <title>Hornet | Fan Page</title>
+
+        <a href="./index.html">Homepage</a> <a href="./hornet.html">Hornet</a>
     </header>
 
     <body>
