--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Hollow Knight | Fan Page</title>
+    
+    <a href="./index.html">Homepage</a> <a href="./hornet.html">Hornet</a>
 </head>
 
 <body>
